[package]
name = "kurbo-material-icons"
description = "Material icons, converted to kurbo paths"
license = "MIT OR Apache-2.0"
repository = "https://github.com/richard-uk1/kurbo-material-icons"
version = "0.0.1"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2024"
exclude = ["material-design-icons", "test.sh"]

[features]
default = []

[dependencies]
kurbo = "0.13.0"

[workspace]
members = [
    ".",
    "generate-icons"
]
